<resources>
    <string name="app_name">Coin100X</string>
    <string name="name"> Enter your name</string>
    <string name="email"> Email-id</string>
    <string name="mobile"> Phone Number</string>
    <string name="password"> Enter your Password</string>
    <string name="confirm_password"> Confirm your password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="add_money">Add Money</string>
    <string name="profile">Profile</string>
    <string name="buy">Buy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>