<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_bg_gradient"
    tools:context="com.coin.coin100x.activity.UserRegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:scaleType="fitXY"
                android:layout_margin="10dp"
                android:src="@drawable/signup"/>


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"                android:hint="@string/name"
                android:inputType="text"
                android:background="@drawable/et_gradient"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_person_24"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/et_gradient"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_email_24"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"                android:hint="@string/mobile"
                android:inputType="phone"
                android:drawablePadding="10dp"
                android:background="@drawable/et_gradient"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/et_gradient"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_baseline_lock_24"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:background="@drawable/et_gradient"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/submitButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:background="@drawable/round_button"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
